tests/src/snapshots/fe_compiler_tests__compile_errors__bad_map6.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: `map` key and value must be types
  ┌─ [snippet]:3:10
  │
3 │   x: map<10, 20>
  │          ^^ this should be a type name

error: `map` key and value must be types
  ┌─ [snippet]:3:14
  │
3 │   x: map<10, 20>
  │              ^^ this should be a type name


